tests/ui/traits/object/no-incomplete-inference.current.stderr
error[E0283]: type annotations needed
  --> $DIR/no-incomplete-inference.rs:16:5
   |
LL |     impls_equals::<dyn Equals<u32>, _>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `U` declared on the function `impls_equals`
   |
   = note: cannot satisfy `dyn Equals<u32>: Equals<_>`
note: required by a bound in `impls_equals`
  --> $DIR/no-incomplete-inference.rs:13:20
   |
LL | fn impls_equals<T: Equals<U> + ?Sized, U: ?Sized>() {}
   |                    ^^^^^^^^^ required by this bound in `impls_equals`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
